# DDL-to-Stremio

./: Dockerfile  README.md  config.py  database.py  main.py  metadata.py  modal.py  pyproject.toml  requirements.txt  scalingo.json
templates/: add.html  base.html  dashboard.html  login.html  media_edit.html  media_management.html
